Added pie chart for location.

--- a/ml_capstone_02.ipynb
+++ b/ml_capstone_02.ipynb
@@ -259,41 +259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "879e12c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 100000, 150000, 250000, 500000, 1000000]\n",
-      "[48442, 2952, 1048, 1005, 975, 736, 707, 1111, 1621, 631, 149, 48, 521]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['No Answer',\n",
-       " '20K',\n",
-       " '30K',\n",
-       " '40K',\n",
-       " '50K',\n",
-       " '60K',\n",
-       " '70K',\n",
-       " '80K',\n",
-       " '100K',\n",
-       " '150K',\n",
-       " '250K',\n",
-       " '500K',\n",
-       " '1M']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_income = df.income.value_counts()\n",
     "incs = df_income.index.values.tolist()\n",
@@ -301,21 +270,20 @@
     "incs_dict = dict(zip(incs, inc_vals))\n",
     "incsp = [x for x in sorted(incs_dict)]\n",
     "inc_valsp = [incs_dict[x] for x in sorted(incs_dict)]\n",
-    "print(incsp)\n",
-    "print(inc_valsp)\n",
+    "# print(incsp)\n",
+    "# print(inc_valsp)\n",
     "incs_labels = []\n",
     "for inc in incsp:\n",
     "    x = str(inc)\n",
     "    if (len(x) < 3): incs_labels.append('No Answer')\n",
     "    elif ((len(x) >= 3) & (len(x) < 7)): incs_labels.append(x[:-3]+'K')\n",
-    "    elif (len(x) >= 7): incs_labels.append(x[:-6]+'M')\n",
-    "incs_labels"
+    "    elif (len(x) >= 7): incs_labels.append(x[:-6]+'M')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "d56b93df",
+   "execution_count": 13,
+   "id": "7bdf4dca",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +292,7 @@
        "Text(0, 0.5, 'Yearly Income in Dollars')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,18 +322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "bcaf3c70",
+   "execution_count": 14,
+   "id": "bedb980f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['islam', 'hinduism', 'buddhism', 'judaism', 'catholicism', 'christianity', 'atheism', 'other', 'agnosticism'] [139, 450, 1948, 3098, 4758, 5787, 6985, 7743, 8812]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "religion_df = df.religion.value_counts()\n",
     "rels = religion_df.index.values.tolist()\n",
@@ -379,13 +339,13 @@
     "for i in sorted(rev_dict):\n",
     "    num_rels.append(i)\n",
     "    relspp.append(rev_dict[i])\n",
-    "print(relspp, num_rels)"
+    "# print(relspp, num_rels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "93d95572",
+   "execution_count": 15,
+   "id": "f945cc71",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +354,7 @@
        "Text(0, 0.5, 'Religious Identities')"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,40 +384,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "b03b3e63",
+   "execution_count": 27,
+   "id": "69481934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_df = pd.DataFrame(df.location.value_counts()).reset_index()\n",
+    "loc_df['state'] = loc_df.apply(lambda row: row.index, axis=1)\n",
+    "# locs = loc_df.index.values.tolist()\n",
+    "# locsp = dict()\n",
+    "# for loc in locs:\n",
+    "#     x = loc.split(',')\n",
+    "#     loci = x[-1].strip(' ').title()\n",
+    "#     if loci in locsp: \n",
+    "#         locsp[loci] += loc_df.location[loc]\n",
+    "#     else: locsp[loci] = loc_df.location[loc]\n",
+    "# loc_dfp = pd.DataFrame(locsp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d82d4fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>location</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>san francisco, california</td>\n",
+       "      <td>31064</td>\n",
+       "      <td>Index(['index', 'location'], dtype='object')</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>oakland, california</td>\n",
+       "      <td>7214</td>\n",
+       "      <td>Index(['index', 'location'], dtype='object')</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>berkeley, california</td>\n",
+       "      <td>4212</td>\n",
+       "      <td>Index(['index', 'location'], dtype='object')</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>san mateo, california</td>\n",
+       "      <td>1331</td>\n",
+       "      <td>Index(['index', 'location'], dtype='object')</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>palo alto, california</td>\n",
+       "      <td>1064</td>\n",
+       "      <td>Index(['index', 'location'], dtype='object')</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "san francisco, california         31064\n",
-       "oakland, california                7214\n",
-       "berkeley, california               4212\n",
-       "san mateo, california              1331\n",
-       "palo alto, california              1064\n",
-       "                                  ...  \n",
-       "south wellfleet, massachusetts        1\n",
-       "orange, california                    1\n",
-       "astoria, new york                     1\n",
-       "london, united kingdom                1\n",
-       "rochester, michigan                   1\n",
-       "Name: location, Length: 199, dtype: int64"
+       "                       index  location  \\\n",
+       "0  san francisco, california     31064   \n",
+       "1        oakland, california      7214   \n",
+       "2       berkeley, california      4212   \n",
+       "3      san mateo, california      1331   \n",
+       "4      palo alto, california      1064   \n",
+       "\n",
+       "                                          state  \n",
+       "0  Index(['index', 'location'], dtype='object')  \n",
+       "1  Index(['index', 'location'], dtype='object')  \n",
+       "2  Index(['index', 'location'], dtype='object')  \n",
+       "3  Index(['index', 'location'], dtype='object')  \n",
+       "4  Index(['index', 'location'], dtype='object')  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.location.value_counts()"
+    "loc_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1d9f1e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states_list = ['Alaska',\n",
+    " 'Alabama',\n",
+    " 'Arkansas',\n",
+    " 'Arizona',\n",
+    " 'California',\n",
+    " 'Colorado',\n",
+    " 'Connecticut',\n",
+    " 'District of Columbia',\n",
+    " 'Delaware',\n",
+    " 'Florida',\n",
+    " 'Georgia',\n",
+    " 'Hawaii',\n",
+    " 'Iowa',\n",
+    " 'Idaho',\n",
+    " 'Illinois',\n",
+    " 'Indiana',\n",
+    " 'Kansas',\n",
+    " 'Kentucky',\n",
+    " 'Louisiana',\n",
+    " 'Massachusetts',\n",
+    " 'Maryland',\n",
+    " 'Maine',\n",
+    " 'Michigan',\n",
+    " 'Minnesota',\n",
+    " 'Missouri',\n",
+    " 'Mississippi',\n",
+    " 'Montana',\n",
+    " 'North Carolina',\n",
+    " 'North Dakota',\n",
+    " 'Nebraska',\n",
+    " 'New Hampshire',\n",
+    " 'New Jersey',\n",
+    " 'New Mexico',\n",
+    " 'Nevada',\n",
+    " 'New York',\n",
+    " 'Ohio',\n",
+    " 'Oklahoma',\n",
+    " 'Oregon',\n",
+    " 'Pennsylvania',\n",
+    " 'Rhode Island',\n",
+    " 'South Carolina',\n",
+    " 'South Dakota',\n",
+    " 'Tennessee',\n",
+    " 'Texas',\n",
+    " 'Utah',\n",
+    " 'Virginia',\n",
+    " 'Vermont',\n",
+    " 'Washington',\n",
+    " 'Wisconsin',\n",
+    " 'West Virginia',\n",
+    " 'Wyoming']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5f8b9d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(states_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2e8fe50c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#locspp = [loc.strip(' ').title() for loc in list(locsp.keys())]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f138e2",
+   "id": "ed52bb89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d76a21f5",
    "metadata": {},
    "outputs": [],
    "source": []
